[project]
name = "stash"
version = "1.0.0"
description = "The CLI tool for recording all your money related transactions!"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
stash = "stash.main:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"